--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 #将激活控制台的快捷键由Ctrl+b修改为Ctrl+a
-unbind C-b
-set -g prefix C-i
-bind C-i send-prefix #必须要定义，否则tab键会失效，两次tab键是send-prefix
+#unbind C-b
+set -g prefix C-s
+#bind C-s send-prefix #必须要定义，否则tab键会失效，两次tab键是send-prefix
 
 bind ? list-keys -T prefix
 
