--- a/tmux.conf
+++ b/tmux.conf
@@ -1,61 +1,56 @@
+#C-a ctrl-a
+#M-k alt-k
+#^j  shift-j
+#bind -r(重复)
+#bind -n(?)
+#bind -r h resize-pane -H 这个不知道晚为什么无法绑定
+
+#在xshell ->file->Properties(alt+p) ： Terminal -> keyboard 中 勾选 Use ALTKey as Meta Key 
+#在xshell ->tools->Options...->Advanced 中 去掉勾选 use ALT key to access menu
+
 #将激活控制台的快捷键由Ctrl+b修改为Ctrl+a
-#unbind C-b
-set -g prefix C-s
-#bind C-s send-prefix #必须要定义，否则tab键会失效，两次tab键是send-prefix
+set -g prefix C-a
+unbind C-b
+unbind C-a
+bind C-a send-prefix #必须要定义，否则tab键会失效，两次tab键是send-prefix
 
 bind ? list-keys -T prefix
-
-unbind v
-unbind h
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# select pane 
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
-
-# resize pane
-unbind ^h
-unbind ^l
-unbind ^j
-unbind ^k
-bind -r ^h resize-pane -L
-bind -r ^l resize-pane -R
-bind -r ^j resize-pane -D
-bind -r ^k resize-pane -U
 
 # split window 
 unbind %
-bind | split-window -h -c '#{pane_current_path}'
-#bind | split-window -h
-#bind v split-window -h
-
 unbind '"'
+bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
-#bind - split-window -v
-#bind h split-window -v
 
-# Use Alt-arrow keys to switch panes
-unbind M-Left 
-unbind M-Right 
-unbind M-Up 
+# select pane 
+unbind M-k 
+unbind M-j 
+unbind M-l 
+unbind M-h
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+
+# resize pane
+unbind M-Up
 unbind M-Down
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
+unbind M-Left
+unbind M-Right
+bind -n M-Up    resize-pane -U
+bind -n M-Down  resize-pane -D
+bind -n M-Left  resize-pane -L
+bind -n M-Right resize-pane -R
 
 #此类配置可以在命令行模式中输入show-options -g查询
-#set -g base-index 1                        #窗口的初始序号；默认为0，这里设置为1
+set -g base-index 1                        #窗口的初始序号；默认为0，这里设置为1
 #set -g display-time 5000                   #提示信息的持续时间；设置足够的时间以避免看不清提示，单位为毫秒
 #set -g repeat-time 1000                    #控制台激活后的持续时间；设置合适的时间以避免每次操作都要先激活控制台，单位为毫秒
 #set -g status-keys vi                      #操作状态栏时的默认键盘布局；可以设置为vi或emacs
 #set -g status-right "#(date +%H:%M' ')"    #状态栏右方的内容；这里的设置将得到类似23:59的显示
 #set -g status-right-length 10              #状态栏右方的内容长度；建议把更多的空间留给状态栏左方（用于列出当前窗口）
 #set -g status-utf8 on                      #开启状态栏的UTF-8支持
-
 set -g default-shell /bin/bash
 
 
